k8s/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dotnetdemo-network-policy
  namespace: gill
spec:
  podSelector:
    matchLabels:
      app: dotnetdemo
  policyTypes:
    - Ingress
    - Egress
  ingress:
    # Allow incoming traffic from pods in the same namespace with the label "app: dotnetdemo"
    - from:
      - podSelector:
          matchLabels:
            app: dotnetdemo
  egress:
    # Allow outgoing traffic to pods in the same namespace with the label "app: dotnetdemo"
    - to:
      - podSelector:
          matchLabels:
            app: dotnetdemo
